<resources>
    <string name="app_name">BSmart Orangtua</string>
    <string name="title_activity_buttom_navigation">ButtomNavigation</string>
    <string name="title_jadwal">Jadwal</string>
    <string name="title_rapot">Rapot</string>
    <string name="title_pembayaran">Pembayaran</string>
    <string name="title_kuisioner">Kuisioner</string>
    <string name="title_profil">Profil</string>
    <string name="aboutus">About Us</string>
    <string name="logout">Log Out</string>
    <string name="editpassword">Edit Password</string>
    <string name="grafik">Grafik Perkembangan</string>

    <string name="stacked_one_1">STATE 1</string>
    <string name="stacked_one_2">STATE 2</string>
    <string name="stacked_one_3">STATE 3</string>
</resources>
