<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_jadwal"
        android:icon="@drawable/ic_schedule_black_24dp"
        android:title="@string/title_jadwal" />

    <item
        android:id="@+id/navigation_rapot"
        android:icon="@drawable/ic_folder_special_black_24dp"
        android:title="@string/title_rapot" />

    <item
        android:id="@+id/navigation_pembayaran"
        android:icon="@drawable/ic_monetization_on_black_24dp"
        android:title="@string/title_pembayaran" />

    <item
        android:id="@+id/navigation_kuisioner"
        android:icon="@drawable/ic_playlist_add_check_black_24dp"
        android:title="@string/title_kuisioner" />

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_profil" />
</menu>